--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Dataretrieval : This R package is designed to obtain its water quality sample data, streamflow data, and metadata directly from either the USGS NWIS (National Water Information System), but it allows for user-supplied text files as inputs. The program is designed to ingest the data directly into R and structure them into file structures suited for EGRET analysis." />
+    <meta name="description" content="dataRetrieval : R package source for USGS data retrieval" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Dataretrieval</title>
+    <title>dataRetrieval</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/USGS-R/dataRetrieval">View on GitHub</a>
 
-          <h1 id="project_title">Dataretrieval</h1>
-          <h2 id="project_tagline">This R package is designed to obtain its water quality sample data, streamflow data, and metadata directly from either the USGS NWIS (National Water Information System), but it allows for user-supplied text files as inputs. The program is designed to ingest the data directly into R and structure them into file structures suited for EGRET analysis.</h2>
+          <h1 id="project_title">dataRetrieval</h1>
+          <h2 id="project_tagline">R package source for USGS data retrieval</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/USGS-R/dataRetrieval/zipball/master">Download this project as a .zip file</a>
@@ -31,39 +31,60 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>Welcome to GitHub Pages.</h3>
+        <h3>Introduction</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>The dataRetrieval package was created to simplify the process of getting hydrologic data in the R enviornment. It has been specifically designed to work seamlessly with the <a href="https://github.com/USGS-R/EGRET/wiki" target="_blank">EGRET package</a>:
+Exploration and Graphics for RivEr Trends (EGRET)
+</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
+<h3>Download and Installation Options:</h3>
+
+<h4> - New to R?</h4>
+<p>If you are new to R, you will need to first install the latest version of R, which can be found <a href="http://www.r-project.org/" target="_blank">here</a>.
+Although there are many options for running and editing R code, a nice enviornment to learn R is RStudio. RStudio can be downloaded <a href="http://rstudio.org/" target="_blank">here</a>.
+Once you have set up your R enviornment, you can follow the directions <a href="https://github.com/USGS-CIDA/WRTDS/wiki" target="_blank">here</a> to download and install the dataRetrieval package.
+</p>
+
+<h4> - R User?</h4>
+<p>Download the package from the EGRET page:</p>
+<a href="https://github.com/USGS-R/EGRET" target="_blank">https://github.com/USGS-R/EGRET</a>
+<p>To install the downloaded package, use the following command:</p>
+<pre><code>
+install.packages(".../dataRetrieval_1.2.1.tar.gz", repos=NULL, type="source")
+#Replace ... with full path to download
 </code></pre>
+<p>Further instructions on installation can be found <a href="https://github.com/USGS-R/EGRET/wiki" target="_blank">here</a>.</p>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<h4> - R Developer?</h4>
+<p>If you are an experienced R developer, and have the package 'devtools', as well as all the required LaTex tools installed to create packages, you can easily build this package directly from gitHub.
 
-<h3>Designer Templates</h3>
+Windows tools can be found <a href="http://cran.r-project.org/bin/windows/Rtools/" target="_blank">here</a>. Carefully follow the directions, and note that you need to install Rtools from that page, as well as <a href="http://www.miktex.org/download" target="_blank">MikTex</a> (the Windows set of LaTex tools). The full set of Mac LaTex tools can be found <a href="http://www.tug.org/mactex/downloading.html" target="_blank">here</a>.</p>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<p>Once you have the required tools for building R packages, you can simply type the following commands in R to build the dataRetrieval package on your system:</p>
 
-<h3>Rather Drive Stick?</h3>
+<pre><code>install.packages('devtools') #if not already installed
+library('devtools')
+</code></pre>
+Once that is installed, you can use the function install_github to install this package directly from github:
+<pre><code>install_github("dataRetrieval", "USGS-R")
+</code></pre>
+This will install the latest code that is currently committed to gitHub.
+</p>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
 
 <h3>Authors and Contributors</h3>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>Robert Hirsch and Laura De Cicco</p>
+<p>For questions, please contact <a href="https://github.com/ldecicco-USGS" class="user-mention">@ldecicco-USGS</a>, or email <a href="mailto:egret_comments@usgs.gov">egret_comments@usgs.gov</a></p>
 
-<h3>Support or Contact</h3>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
     </div>
 
-    <!-- FOOTER  -->
+    <!-- FOOTER -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Dataretrieval maintained by <a href="https://github.com/USGS-R">USGS-R</a></p>
+        <p class="copyright">dataRetrieval maintained by <a href="https://github.com/USGS-R">USGS-R</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
