--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ Once you have set up your R enviornment, you can follow the directions <a href="
 <p>To install the downloaded package, first install the required zoo package from CRAN,then install the dataRetrieval package:</p>
 <pre><code>
 install.packages("zoo")
-install.packages("dataRetrieval", repos="http://usgs-r.github.com/EGRET/", type="source")
+install.packages("dataRetrieval", repos="http://usgs-r.github.com", type="source")
 </code></pre>
 
 <h4> - R Developer?</h4>
