--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <section id="main_content" class="inner">
         <h3>Introduction</h3>
 
-<p>The dataRetrieval package was created to simplify the process of getting hydrologic data in the R enviornment. It has been specifically designed to work seamlessly with the <a href="https://github.com/USGS-R/EGRET/wiki" target="_blank">EGRET package</a>:
+<p>The dataRetrieval package was created to simplify the process of getting hydrologic data in the R environment. It has been specifically designed to work seamlessly with the <a href="https://github.com/USGS-R/EGRET/wiki" target="_blank">EGRET package</a>:
 Exploration and Graphics for RivEr Trends (EGRET)
 </p>
 
