--- a/index.html
+++ b/index.html
@@ -49,10 +49,12 @@ Once you have set up your R enviornment, you can follow the directions <a href="
 <h4> - R User?</h4>
 <p>To install the downloaded package, first install the required zoo, XML, and RCurl packages from CRAN,then install the dataRetrieval package:</p>
 <pre><code>
-install.packages(c("zoo","XML","RCurl"))
-install.packages("dataRetrieval", repos="http://usgs-r.github.com", type="source")
+install.packages("dataRetrieval", repos=c("http://usgs-r.github.com","http://cran.us.r-project.org"),
+dependencies=TRUE,
+type="both")
 </code></pre>
 
+<!--
 <h4> - R Developer?</h4>
 <p>If you are an experienced R developer, and have the package 'devtools' and all the required LaTex tools installed to create packages, you can build the working version of this package directly from gitHub.
 
@@ -66,7 +68,7 @@ install_github("dataRetrieval", "USGS-R")
 </code></pre>
 This will install the latest code that is currently committed to gitHub.
 </p>
-
+-->
 
 <h3>Authors and Contributors</h3>
 
