--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ Once you have set up your R enviornment, you can follow the directions <a href="
 </p>
 
 <h4> - R User?</h4>
-<p>To install the downloaded package, use the following command:</p>
+<p>To install the dataRetrieval package, use the following command:</p>
 <pre><code>
 install.packages("dataRetrieval", 
 repos=c("http://usgs-r.github.com","http://cran.us.r-project.org"),
