--- a/DISCLAIMER.html
+++ b/DISCLAIMER.html
@@ -52,11 +52,7 @@
         <input type="search" class="form-control me-sm-2" aria-label="Toggle navigation" name="search-input" data-search-index="search.json" id="search-input" placeholder="Search for" autocomplete="off"></form>
 
       <ul class="navbar-nav"><li class="nav-item">
-<<<<<<< HEAD
   <a class="external-link nav-link" href="https://github.com/DOI-USGS/dataRetrieval">
-=======
-  <a class="external-link nav-link" href="https://github.com/USGS-R/dataRetrieval">
->>>>>>> c72c4f746608d7eeb2f990839c5ae587fe090dbf
     <span class="fa fa-github fa-lg"></span>
      
   </a>
@@ -72,14 +68,11 @@
       <small class="dont-index">Source: <a href="https://github.com/DOI-USGS/dataRetrieval/blob/HEAD/DISCLAIMER.md" class="external-link"><code>DISCLAIMER.md</code></a></small>
     </div>
 
-<div id="disclaimer" class="section level1"><p>This software is preliminary or provisional and is subject to revision. It is being provided to meet the need for timely best science. The software has not received final approval by the U.S. Geological Survey (USGS). No warranty, expressed or implied, is made by the USGS or the U.S. Government as to the functionality of the software and related material nor shall the fact of release constitute any such warranty. The software is provided on the condition that neither the USGS nor the U.S. Government shall be held liable for any damages resulting from the authorized or unauthorized use of the software.</p></div>
+<div id="disclaimer" class="section level1">
 
-<<<<<<< HEAD
 <p>This software is preliminary or provisional and is subject to revision. It is being provided to meet the need for timely best science. The software has not received final approval by the U.S. Geological Survey (USGS). No warranty, expressed or implied, is made by the USGS or the U.S. Government as to the functionality of the software and related material nor shall the fact of release constitute any such warranty. The software is provided on the condition that neither the USGS nor the U.S. Government shall be held liable for any damages resulting from the authorized or unauthorized use of the software.</p>
 </div>
 
-=======
->>>>>>> c72c4f746608d7eeb2f990839c5ae587fe090dbf
   </main></div>
 
 
